@@ -301,6 +301,14 @@ $modversion['config'][$i]['formtype'] = 'yesno';
 $modversion['config'][$i]['valuetype'] = 'int';
 $modversion['config'][$i]['default'] = 0;
 $i++;
+$modversion['config'][$i]['name'] = 'catcols';
+$modversion['config'][$i]['title'] = '_MI_IMLINKS_CATCOLS';
+$modversion['config'][$i]['description'] = '_MI_IMLINKS_CATCOLSDSC';
+$modversion['config'][$i]['formtype'] = 'select';
+$modversion['config'][$i]['valuetype'] = 'text';
+$modversion['config'][$i]['default'] = 2;
+$modversion['config'][$i]['options'] = array( '1' => 1, '2' => 2, '3' => 3, '4' => 4, '5' => 5 );
+$i++;
 $modversion['config'][$i]['name'] = 'form_options';
 $modversion['config'][$i]['title'] = '_MI_IMLINKS_EDITOR';
 $modversion['config'][$i]['description'] = '_MI_IMLINKS_EDITORCHOICE';
@@ -558,7 +566,7 @@ $modversion['config'][$i]['title'] = '_MI_IMLINKS_FOOTERPRINT';
 $modversion['config'][$i]['description'] = '_MI_IMLINKS_FOOTERPRINTDSC';
 $modversion['config'][$i]['formtype'] = 'textarea';
 $modversion['config'][$i]['valuetype'] = 'text';
-$modversion['config'][$i]['default'] = ICMS_URL;
+$modversion['config'][$i]['default'] = ''.ICMS_URL.'';
 //$i++;
 //$modversion['config'][$i]['name'] = 'printheader';
 //$modversion['config'][$i]['title'] = '_MI_IMLINKS_HEADERPRINT';
