@@ -18,7 +18,7 @@
 	  &nbsp;&nbsp;<{$subcat.infercategories}>
      <{/if}>
 	 </td>
-	 <{if $subcat.count is div by 2}>
+	 <{if $subcat.count is div by $catcols}>
     </tr><tr>
      <{/if}>
    <{/foreach}>
